--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "script.js",
   "type": "module",
   "scripts": {
-    "dev": "vite --host --open"
+    "dev": "vite --host --open",
+    "build": "vite build"
   },
   "repository": {
     "type": "git",
